# ps_2_freertos

./: CMakeCache.txt  CMakeLists.txt  FreeRTOSConfig.h  LICENSE  Makefile  README.md  buffer.c  buffer.h  cmake_install.cmake  ps_2_freertos.c  ps_2_freertos.dis  ps_2_freertos.elf.map  ps_2_freertos.hex  ps_2_freertos.uf2  spi_slave.c  spi_slave.h  target_pico_w.cmake
ps_2_pio/: pio_ps_2.c  pio_ps_2.h  ps_2.pio  ps_2.pio.h  ps_2_test.c
spi_master_slave/spi_slave/: spi_slave.c
